# perp-adversary

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-30-perp-adversary-v0.md
docs/superpowers/specs/: 2026-05-30-perp-adversary-design.md
scenarios/: jelly.json
src/: driver.rs  lib.rs  oracles.rs  report.rs  runner.rs  scenario.rs
tests/: adl.rs  adl_conformance.rs  anti_vacuity.rs  conservation_campaign.rs  convert_realization.rs  driver_obs.rs  earned_lien.rs  earned_lien_conformance.rs  funding_conservation.rs  jelly_campaign.rs  kani_adl.rs  kani_conservation.rs  kani_funding.rs  kani_liquidation.rs  kani_market.rs  kani_oracles.rs  liquidation.rs  liquidation_conformance.rs  oracle_adl.rs  oracle_conservation.rs  oracle_liquidation.rs  oracle_market.rs  oracle_o1.rs  report.rs  runner.rs  scenario.rs  seam_convert.rs  smoke.rs
