[package]
name = "perp-adversary"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Adversarial economic conformance harness for Solana perps risk engines"

[dependencies]
percolator = { git = "https://github.com/aeyakovenko/percolator", rev = "71c903242764b65bd5862eaf7779e61463af954b" }
proptest = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
overflow-checks = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
